Fix jumps on input fields

--- a/src/styles/blocks/field.scss
+++ b/src/styles/blocks/field.scss
@@ -6,7 +6,7 @@
     padding: 14px 16px;
     margin-bottom: 16px;
 
-    border: none;
+    border: 1px solid transparent;
     border-radius: $field-border-radius;
     background-color: $input-background-color;
 
